--- a/src/Sequence.Api/wwwroot/src/index.css
+++ b/src/Sequence.Api/wwwroot/src/index.css
@@ -8,17 +8,26 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+#home {
+  display: flex;
+  max-height: 100vh;
+  overflow-y: auto;
+}
+
 #sidebar {
-  bottom: 0;
+  display: flex;
+  flex: 0;
+  flex-direction: column;
+  min-width: 400px;
+}
+
+#games {
   overflow-y: scroll;
   padding: 1em;
-  position: fixed;
-  top: 0;
-  width: 400px;
 }
 
 #main {
-  margin-left: 450px;
+  flex: 1;
 }
 
 #board {
