--- a/src/Sequence.Api/wwwroot/src/index.css
+++ b/src/Sequence.Api/wwwroot/src/index.css
@@ -10,7 +10,7 @@ body {
 
 #home {
   display: flex;
-  max-height: 100vh;
+  height: 100vh;
   overflow-y: auto;
 }
 
@@ -22,7 +22,7 @@ body {
 }
 
 #games {
-  overflow-y: scroll;
+  overflow-y: auto;
   padding: 1em;
 }
 
