Set 'link' button text colors (RE: Firefox)

--- a/src/Sequence.Api/wwwroot/src/Layout.css
+++ b/src/Sequence.Api/wwwroot/src/Layout.css
@@ -92,6 +92,7 @@ hr {
 .sign-out-btn {
     background: none;
     border: none;
+    color: #777777;
     cursor: pointer;
     display: inline-block;
     font-family: inherit;
