Use border-box as default box-sizing

--- a/src/Sequence.Api/wwwroot/src/Game/Game.css
+++ b/src/Sequence.Api/wwwroot/src/Game/Game.css
@@ -221,6 +221,7 @@ div[data-rank="king"]::after {
     background-color: #FFFFFF;
     border: 1px black solid;
     border-radius: 7.5%;
+    box-sizing: content-box;
     display: flex;
     flex-direction: column;
     justify-content: center;
