--- a/src/Sequence.Api/wwwroot/src/Game/Game.css
+++ b/src/Sequence.Api/wwwroot/src/Game/Game.css
@@ -277,22 +277,13 @@ div[data-rank="king"]::after {
     text-overflow: '… <';
 }
 
-.players-player[data-current-player='true']>* {
+.players-player>* {
     display: inline-block;
     max-width: 75%;
     overflow: hidden;
-    text-decoration: underline;
     text-overflow: ellipsis;
     vertical-align: text-bottom;
     white-space: nowrap;
-}
-
-.players-player[data-current-player='true']::before {
-    content: '> ';
-}
-
-.players-player[data-current-player='true']::after {
-    content: ' <';
 }
 
 .players-player[data-current-player='false'][data-team='red'] {
@@ -301,6 +292,18 @@ div[data-rank="king"]::after {
 
 .players-player[data-current-player='false'][data-team='green'] {
     color: #00800088;
+}
+
+.players-player[data-current-player='true'] {
+    text-decoration: underline;
+}
+
+.players-player[data-current-player='true']::before {
+    content: ' > ';
+}
+
+.players-player[data-current-player='true']::after {
+    content: ' < ';
 }
 
 .players-player[data-current-player='true'][data-team='red'] {
