--- a/src/Sequence.Api/wwwroot/src/index.css
+++ b/src/Sequence.Api/wwwroot/src/index.css
@@ -1,3 +1,10 @@
+@font-face {
+    font-family: 'Inconsolata';
+    src: local('Inconsolata Regular'), local('Inconsolata-Regular'), url('./fonts/Inconsolata-Regular.woff2') format('woff2');
+    font-weight: normal;
+    font-style: normal;
+}
+
 * {
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
