--- a/src/Sequence.Api/wwwroot/src/NewGame.css
+++ b/src/Sequence.Api/wwwroot/src/NewGame.css
@@ -7,3 +7,31 @@
     display: inline-block;
     margin: 1em 0 0 0;
 }
+
+.new-game-opponent {
+    margin: 1em 0 0 0;
+}
+
+.new-game-game-size {
+    display: inline-block;
+    width: 60px;
+}
+
+.new-game-game-size input {
+    height: 0;
+    margin: 0;
+    padding: 0;
+    width: 0;
+}
+
+.new-game-game-size-text {
+    border: 1px solid transparent;
+    display: inline-block;
+    padding: 0.5em;
+    text-align: center;
+    width: 100%;
+}
+
+input:checked+.new-game-game-size-text {
+    border-color: #333;
+}
