Fix toggle button in Firefox

--- a/api/Sequence.Api/wwwroot/src/NewGame/NewGame.css
+++ b/api/Sequence.Api/wwwroot/src/NewGame/NewGame.css
@@ -18,7 +18,8 @@
     width: 60px;
 }
 
-.new-game-game-size input {
+.new-game-game-size input[type="radio"] {
+    display: none;
     height: 0;
     margin: 0;
     padding: 0;
