--- a/api/Sequence.Api/wwwroot/src/Game/Game.css
+++ b/api/Sequence.Api/wwwroot/src/Game/Game.css
@@ -178,8 +178,57 @@ div[data-rank="ten"]::after {
     content: "10";
 }
 
-div[data-rank="jack"]::after {
-    content: "J";
+div[data-suit="diamonds"][data-rank="jack"]::after,
+div[data-suit="clubs"][data-rank="jack"]::after {
+    content: "";
+    animation: two-eyed-jack 1s linear infinite;
+}
+
+@keyframes two-eyed-jack {
+    0% {
+        content: 'A';
+    }
+    8.33% {
+        content: '2';
+    }
+    16.67% {
+        content: '3';
+    }
+    25% {
+        content: '4';
+    }
+    33.33% {
+        content: '5';
+    }
+    41.67% {
+        content: '6';
+    }
+    50% {
+        content: '7';
+    }
+    58.33% {
+        content: '8';
+    }
+    66.67% {
+        content: '9';
+    }
+    75% {
+        content: '10';
+    }
+    83.33% {
+        content: 'Q';
+    }
+    91.67% {
+        content: 'K';
+    }
+    100% {
+        content: 'K';
+    }
+}
+
+div[data-suit="hearts"][data-rank="jack"]::after,
+div[data-suit="spades"][data-rank="jack"]::after {
+    content: "💀";
 }
 
 div[data-rank="queen"]::after {
