--- a/api/Sequence.Api/wwwroot/src/Game/Game.css
+++ b/api/Sequence.Api/wwwroot/src/Game/Game.css
@@ -400,3 +400,33 @@ div[data-rank="king"]::after {
 .players-player[data-winner='true']::after {
     content: ' 👑 ';
 }
+
+kbd {
+    background-color: #eee;
+    border-radius: 3px;
+    border: 1px solid #b4b4b4;
+    box-shadow: 0 1px 1px rgba(0, 0, 0, .2), 0 2px 0 0 rgba(255, 255, 255, .7) inset;
+    color: #333;
+    display: inline-block;
+    font-size: .85em;
+    font-weight: 700;
+    line-height: 1;
+    padding: 2px 4px;
+    white-space: nowrap;
+}
+
+.hand-card {
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+}
+
+.hand-card kbd {
+    margin-top: 0.5em;
+}
+
+@media only screen and (max-width: 600px) {
+    .hand-card kbd {
+        display: none;
+    }
+}
