--- a/api/Sequence.Api/wwwroot/src/Game/Game.css
+++ b/api/Sequence.Api/wwwroot/src/Game/Game.css
@@ -18,6 +18,22 @@
     padding: 8pt;
 }
 
+.cell.pulse {
+    animation: pulse 1s infinite;
+}
+
+@keyframes pulse {
+    0% {
+        box-shadow: inset 0 0 0 rgb(181, 207, 255);
+    }
+    50% {
+        box-shadow: inset 0 0 10px 8px rgb(181, 207, 255);
+    }
+    100% {
+        box-shadow: inset 0 0 0 rgb(181, 207, 255);
+    }
+}
+
 .cell.dimmed::before,
 .cell.dimmed::after {
     opacity: 0;
