--- a/api/Sequence.Api/wwwroot/src/index.css
+++ b/api/Sequence.Api/wwwroot/src/index.css
@@ -17,5 +17,47 @@ body {
     padding: 0;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-    font-family: 'Inconsolata', monospace;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+}
+
+a {
+    color: #333333;
+    cursor: pointer;
+    text-decoration: underline;
+}
+
+a:hover {
+    background-color: #dddddd;
+}
+
+a:visited {
+    color: #777777;
+}
+
+input[type="text"],
+select {
+    font-size: 13pt;
+    padding: 0.5em;
+    width: 100%;
+}
+
+button {
+    font-size: 13pt;
+    padding: 0.5em;
+    width: 100%;
+}
+
+hr {
+    margin-left: 0;
+    margin-right: 0;
+}
+
+b,
+h2,
+h3,
+h4,
+h5,
+h6,
+strong {
+    font-weight: 500;
 }
