--- a/api/Sequence.Api/wwwroot/src/Layout.css
+++ b/api/Sequence.Api/wwwroot/src/Layout.css
@@ -78,3 +78,10 @@
         width: 100%;
     }
 }
+
+@media only screen and (max-width: 375px) {
+    .layout-header-title,
+    .layout-header-subtitle {
+        font-size: 24pt;
+    }
+}
