--- a/api/Sequence.Api/wwwroot/src/NewGame/NewGame.css
+++ b/api/Sequence.Api/wwwroot/src/NewGame/NewGame.css
@@ -58,6 +58,7 @@ input:checked+.new-game-game-size-text {
 
 .new-game-win-condition-input {
     text-align: right;
+    width: 75px;
 }
 
 @media only screen and (max-width: 479px) {
