--- a/api/Sequence.Api/wwwroot/src/Layout.css
+++ b/api/Sequence.Api/wwwroot/src/Layout.css
@@ -77,11 +77,21 @@
     .layout {
         width: 100%;
     }
-}
-
-@media only screen and (max-width: 375px) {
     .layout-header-title,
     .layout-header-subtitle {
         font-size: 24pt;
+    }
+}
+
+@media only screen and (max-width: 480px) {
+    .layout-header {
+        flex-direction: column;
+        margin: 0;
+    }
+    .layout-header-title,
+    .layout-header-subtitle {
+        font-size: 20pt;
+        line-height: 24pt;
+        margin: 0;
     }
 }
