--- a/api/Sequence.Api/wwwroot/src/Games/Games.css
+++ b/api/Sequence.Api/wwwroot/src/Games/Games.css
@@ -2,3 +2,19 @@
     color: #666666;
     display: inline-block;
 }
+
+.game-list {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+.game-list-item {
+    line-height: 125%;
+    margin-top: 0.5em;
+}
+
+.game-list-item-subtitle {
+    color: #666666;
+    font-size: 90%;
+}
