--- a/api/Sequence.Api/wwwroot/src/Game/Game.css
+++ b/api/Sequence.Api/wwwroot/src/Game/Game.css
@@ -298,7 +298,7 @@ div[data-rank="king"]::after {
 
 .deck {
     color: #FFFFFF;
-    margin: 1em 0 0 0;
+    margin: 0;
 }
 
 .players {
@@ -402,6 +402,23 @@ kbd {
     margin-top: 0.5em;
 }
 
+.game-metadata {
+    display: flex;
+    margin-top: 0.5em;
+}
+
+.game-metadata>* {
+    padding: 0.5em;
+}
+
+.game-metadata>*:first-child {
+    padding-left: 0;
+}
+
+.rules {
+    width: 250px;
+}
+
 @media only screen and (max-width: 600px) {
     .hand-card kbd {
         display: none;
@@ -446,6 +463,9 @@ kbd {
     }
     .players {
         flex-direction: column;
+        font-size: 80%;
+    }
+    .rules {
         font-size: 80%;
     }
 }
