Experimental: Hide cards when device is not in motion

--- a/api/Sequence.Api/wwwroot/src/Game/Game.css
+++ b/api/Sequence.Api/wwwroot/src/Game/Game.css
@@ -256,6 +256,10 @@ div[data-rank="king"]::after {
     justify-content: center;
 }
 
+.hand.hide .card {
+    opacity: 0;
+}
+
 .card {
     align-items: center;
     background-color: #FFFFFF;
