Can re-create same game after game is ended

--- a/api/Sequence.Api/wwwroot/src/Game/Game.css
+++ b/api/Sequence.Api/wwwroot/src/Game/Game.css
@@ -3,6 +3,10 @@
     margin: 0 auto;
 }
 
+.re-create-game {
+    margin-bottom: 0.5em;
+}
+
 .board {
     display: grid;
     justify-content: center;
