--- a/src/wwwroot/src/Game/Game.css
+++ b/src/wwwroot/src/Game/Game.css
@@ -420,6 +420,16 @@ kbd {
     width: 250px;
 }
 
+.exchange-dead-card-btn {
+    color: #000000;
+    font-size: 110%;
+    font-weight: 600;
+    line-height: 130%;
+    margin-top: 0.5em;
+    text-align: center;
+    text-decoration: none;
+}
+
 @media only screen and (max-width: 600px) {
     .hand-card kbd {
         display: none;
@@ -481,5 +491,9 @@ kbd {
     }
     .rules {
         font-size: 80%;
+    }
+    .exchange-dead-card-btn {
+        font-size: 100%;
+        font-weight: unset;
     }
 }
